# freelance-forge

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/entity/: company.rs  expense.rs  invoice.rs  invoice_line_item.rs  invoice_template.rs  mod.rs  session.rs  user.rs
backend/src/migration/: m20260201_000001_create_invoices.rs  m20260201_000002_create_auth.rs  m20260201_000003_company_and_addresses.rs  m20260201_000004_company_registration_number.rs  m20260201_000005_invoice_line_items.rs  m20260201_000006_invoice_client_address.rs  m20260201_000007_company_invoice_owner.rs  m20260201_000008_invoice_templates.rs  m20260201_000009_invoice_template_layout.rs  m20260201_000010_invoice_template_note_default.rs  m20260201_000011_invoice_template_html.rs  m20260201_000012_invoice_line_item_mode.rs  m20260201_000013_invoice_number.rs  m20260201_000014_expenses.rs  mod.rs
backend/src/modules/: ai.rs  auth.rs  company.rs  expenses.rs  invoices.rs  mod.rs
frontend/: .gitignore  index.html  package-lock.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CompanySection.tsx  DashboardHeader.tsx  DashboardNav.tsx  InvoiceForm.tsx  InvoicePreview.tsx  InvoiceTable.tsx  ProfileSection.tsx
frontend/src/lib/: api.ts  currency.ts
frontend/src/routes/: Auth.tsx  Dashboard.tsx  Expenses.tsx  Invoices.tsx  NotFound.tsx  Reports.tsx  Templates.tsx
