[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }
sea-orm-migration = { version = "0.12", default-features = false, features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
argon2 = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
handlebars = "5"
aws-config = "1"
aws-sdk-s3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
